# meshgen

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  INSTALL.md  README.md  environment.yml  fantom.py  pyproject.toml  setup.py  tcpc_taper_ends.py
documentation/: geometry.md  mesher.md  utilities.md  voxels.md
examples/: extrude_and_cap.py  extrude_and_cap_dash.py  glenn_capped_visualize.py  glenn_extended_visualize.py  junction_2d_dash.py  junction_2d_visualize.py  master_combined_visualize.py
examples/output/: dim_glenn_capped.txt
meshgen/: geometry.py  mesher.py  utilities.py  voxels.py
meshgen/geo_templates/: basic_junction_template.geo  junction_1d_template.geo  junction_2d_template.geo  t_cube_template.geo  t_cylinder_template.geo
meshgen/geo_templates/temp/: __init__.py
meshgen/stl_models/: __init__.py
meshgen/stl_models/temp/: __init__.py
